--- a/frontend/src/helper/Pop.css
+++ b/frontend/src/helper/Pop.css
@@ -1,20 +1,3 @@
-@keyframes slide-in {
-    from {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
 .pop-alert {
-    animation: slide-in 0.4s ease-out;
-    /* Ensure a high z-index is applied to the element */
-    z-index: 20000; /* Added z-index here as well for redundancy */
-}
-
-.animate-ping-slow {
-    animation: ping 1s infinite;
+    z-index: 20000; 
 }
