--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,6 @@ html, body, #root {
   padding: 0;
   width: 100%;
   font-family: 'Inter', sans-serif;
-  color: var(--color-text);
   background-color: white;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
@@ -19,6 +18,9 @@ html, body, #root {
   scroll-behavior: smooth;
 }
 
+.glossy-icon-text{
+
+}
 .glossy-text {
                 text-shadow:
                   
