--- a/frontend/src/Components/LogoSimmer.css
+++ b/frontend/src/Components/LogoSimmer.css
@@ -1,4 +1,4 @@
-.shimmer-wrapper {
+.lshimmer-wrapper {
     background: #f0f0f0;
     overflow: hidden;
     border-radius: 1px;
@@ -6,30 +6,32 @@
     width: 2px;
   }
   
-  .shimmer-effect {
-    background: linear-gradient(to right, #f0f0f0 8%, #e0e0e0 18%, #f0f0f0 33%);
+  .lshimmer-effect {
+    background: linear-gradient(to right, #d1cfcf 8%, #a7a6a6 18%, #706f6f 33%);
     background-size: 100px 100%;
     height: 100%;
     width: 100%;
+    animation: shimmer 1.6s infinite ease-in-out;
+
   }
   
-  .shimmer-wrapper.heading {
+  .lshimmer-wrapper.heading {
     height: 2px;
     width: 2px;
     margin-bottom: -40%;
   }
   
-  .shimmer-wrapper.paragraph {
+  .lshimmer-wrapper.paragraph {
     height: 1%;
     width: 5%;
     margin-bottom: -10px;
   }
-  .shimmer-wrapper.paragraph:last-child {
+  .lshimmer-wrapper.paragraph:last-child {
     margin-bottom: 0;
     width: 10%;
   }
   
-  .shimmer-wrapper.button {
+  .lshimmer-wrapper.button {
     height: 10px;
     width: 20px;
     border-radius: 1px;
